--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="header6 cid-rTasxu4r3t mbr-fullscreen" id="header6-9">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header6 cid-rTasxu4r3t mbr-fullscreen" id="header6-9">
 
     
 
@@ -106,7 +106,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ESY0pgV9v1Fz5zs8fvVd4L6jZXGXKsSdBLhyMhMW2IQi4B8lciar+oHzHd1q3t+vSQtdUucDJrzv60MtDLsOtEYJnwbqJnOvyq3EXcrP6tHLd/IUjhTQviAZostTK4yu">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GXkAlNKg3anRgVJpwczMVyYnsVjOgznco9YUVHsfGVElfX9bfCf+iU9X+QzxTASZyNqD4F6V/vXan3vxmgva5kZcJTq9Tbj19FQtumoWXbDplk3n5lt5EVIVHWnSnDDY">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -215,34 +215,34 @@
         <h3 class="mbr-section-title align-center mbr-fonts-style display-2">
             Menu</h3>
         <h4 class="mbr-section-subtitle align-center pb-4 mbr-fonts-style display-5"></h4>
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTbek5mk5z">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTbht4BEpA">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110238-500x323.png" alt="" data-slide-to="0" title="" data-target="#rTbek5mpoB">
+                    <img class="w-100" src="assets/images/-20200314110238-500x323.png" alt="" data-slide-to="0" title="" data-target="#rTbht4BVKe">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110254-500x331.png" alt="" data-slide-to="1" title="" data-target="#rTbek5mpoB">
+                    <img class="w-100" src="assets/images/-20200314110254-500x331.png" alt="" data-slide-to="1" title="" data-target="#rTbht4BVKe">
                 </div>
             </div><div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110242-499x333.png" alt="" data-slide-to="2" title="" data-target="#rTbek5mpoB">
+                    <img class="w-100" src="assets/images/-20200314110242-499x333.png" alt="" data-slide-to="2" title="" data-target="#rTbht4BVKe">
                 </div>
             </div>
             
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110358-500x331.png" alt="" data-slide-to="3" title="" data-target="#rTbek5mpoB">
+                    <img class="w-100" src="assets/images/-20200314110358-500x331.png" alt="" data-slide-to="3" title="" data-target="#rTbht4BVKe">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTbek5mk5z">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTbht4BEpA">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="rTbek5mpoB">
+                        <div class="carousel slide" data-ride="carousel" id="rTbht4BVKe">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/-20200314110238-500x323.png" alt="">
@@ -258,18 +258,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#rTbek5mpoB"></li>
-                                <li data-slide-to="1" data-target="#rTbek5mpoB"></li>
-                                <li data-slide-to="2" data-target="#rTbek5mpoB"></li>
-                                <li data-slide-to="3" data-target="#rTbek5mpoB"></li>
+                                <li data-slide-to="0" class="active" data-target="#rTbht4BVKe"></li>
+                                <li data-slide-to="1" data-target="#rTbht4BVKe"></li>
+                                <li data-slide-to="2" data-target="#rTbht4BVKe"></li>
+                                <li data-slide-to="3" data-target="#rTbht4BVKe"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTbek5mpoB">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTbht4BVKe">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTbek5mpoB">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTbht4BVKe">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -291,34 +291,34 @@
         <h3 class="mbr-section-title align-center mbr-fonts-style display-2">
             Deruvative</h3>
         <h4 class="mbr-section-subtitle align-center pb-4 mbr-fonts-style display-5"></h4>
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTbek5nl3y">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTbht4B6g6">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103330-510x383.png" alt="" data-slide-to="0" title="" data-target="#rTbek5nY0C">
+                    <img class="w-100" src="assets/images/-20200314103330-510x383.png" alt="" data-slide-to="0" title="" data-target="#rTbht4B3Qi">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103334-510x383.png" alt="" data-slide-to="1" title="" data-target="#rTbek5nY0C">
+                    <img class="w-100" src="assets/images/-20200314103334-510x383.png" alt="" data-slide-to="1" title="" data-target="#rTbht4B3Qi">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103341-510x383.png" alt="" data-slide-to="2" title="" data-target="#rTbek5nY0C">
+                    <img class="w-100" src="assets/images/-20200314103341-510x383.png" alt="" data-slide-to="2" title="" data-target="#rTbht4B3Qi">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103349-510x383.png" alt="" data-slide-to="3" title="" data-target="#rTbek5nY0C">
+                    <img class="w-100" src="assets/images/-20200314103349-510x383.png" alt="" data-slide-to="3" title="" data-target="#rTbht4B3Qi">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTbek5nl3y">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTbht4B6g6">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="rTbek5nY0C">
+                        <div class="carousel slide" data-ride="carousel" id="rTbht4B3Qi">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/-20200314103330-510x383.png" alt="">
@@ -334,18 +334,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#rTbek5nY0C"></li>
-                                <li data-slide-to="1" data-target="#rTbek5nY0C"></li>
-                                <li data-slide-to="2" data-target="#rTbek5nY0C"></li>
-                                <li data-slide-to="3" data-target="#rTbek5nY0C"></li>
+                                <li data-slide-to="0" class="active" data-target="#rTbht4B3Qi"></li>
+                                <li data-slide-to="1" data-target="#rTbht4B3Qi"></li>
+                                <li data-slide-to="2" data-target="#rTbht4B3Qi"></li>
+                                <li data-slide-to="3" data-target="#rTbht4B3Qi"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTbek5nY0C">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTbht4B3Qi">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTbek5nY0C">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTbht4B3Qi">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
