--- a/page6.html
+++ b/page6.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header1 cid-rTb1lTBZqn" id="header16-2c">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header1 cid-rTb1lTBZqn" id="header16-2c">
 
     
 
@@ -91,34 +91,34 @@
         <h3 class="mbr-section-title align-center mbr-fonts-style display-2">
             Menu</h3>
         <h4 class="mbr-section-subtitle align-center pb-4 mbr-fonts-style display-5"></h4>
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTbelscIYD">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTbhuVwLPn">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110238-500x323.png" alt="" data-slide-to="0" title="" data-target="#rTbelsclXY">
+                    <img class="w-100" src="assets/images/-20200314110238-500x323.png" alt="" data-slide-to="0" title="" data-target="#rTbhuVw0ul">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110254-500x331.png" alt="" data-slide-to="1" title="" data-target="#rTbelsclXY">
+                    <img class="w-100" src="assets/images/-20200314110254-500x331.png" alt="" data-slide-to="1" title="" data-target="#rTbhuVw0ul">
                 </div>
             </div><div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110242-499x333.png" alt="" data-slide-to="2" title="" data-target="#rTbelsclXY">
+                    <img class="w-100" src="assets/images/-20200314110242-499x333.png" alt="" data-slide-to="2" title="" data-target="#rTbhuVw0ul">
                 </div>
             </div>
             
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110358-500x331.png" alt="" data-slide-to="3" title="" data-target="#rTbelsclXY">
+                    <img class="w-100" src="assets/images/-20200314110358-500x331.png" alt="" data-slide-to="3" title="" data-target="#rTbhuVw0ul">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTbelscIYD">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTbhuVwLPn">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="rTbelsclXY">
+                        <div class="carousel slide" data-ride="carousel" id="rTbhuVw0ul">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/-20200314110238-500x323.png" alt="">
@@ -134,18 +134,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#rTbelsclXY"></li>
-                                <li data-slide-to="1" data-target="#rTbelsclXY"></li>
-                                <li data-slide-to="2" data-target="#rTbelsclXY"></li>
-                                <li data-slide-to="3" data-target="#rTbelsclXY"></li>
+                                <li data-slide-to="0" class="active" data-target="#rTbhuVw0ul"></li>
+                                <li data-slide-to="1" data-target="#rTbhuVw0ul"></li>
+                                <li data-slide-to="2" data-target="#rTbhuVw0ul"></li>
+                                <li data-slide-to="3" data-target="#rTbhuVw0ul"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTbelsclXY">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTbhuVw0ul">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTbelsclXY">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTbhuVw0ul">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
